# forklone

./: .pre-commit-config.yaml  LICENSE  README.rst  forklone.py  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yml
src/forklone/: __init__.py  __main__.py
